[package]
name = "unwrap_or_panic"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/remme123/unwrap_or_panic"
documentation = "https://docs.rs/unwrap_or_panic"
keywords = ["unwrap", "no_std"]
description = "Unwrap a `Result<T, E>` without formating the Error `E`. No `Debug` trait bounding for type `E`"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = []
std = []