[package]
name = "unwrap_or_panic"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Unwrap a `Result<T, E>` without formating the Error `E` and no trait bound `E: Debug`"
keywords = ["unwrap", "no_std", "panic"]
documentation = "https://docs.rs/unwrap_or_panic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["panic_location"]
panic_location = []